# STM32FXX_Template_For_Rust

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
