[package]
name = "STM32Fxx-template-for-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semihosting = "0.1.15"
embedded-hal = "1.0.0"
nb = "1.1.0"
cortex-m = "0.7.7"
cortex-m-rtic = "1.1.4"
cortex-m-rt = "0.7.3"
debounced-pin = "0.3.0"
panic-halt = "0.2.0"

[dependencies.stm32f1]
version = ""
features = [""]

[dependencies.stm32f1xx-hal]
version = ""
features = ["", "", ""]

[dev-dependencies]

[features]
device-selected = []
doc = []
rt = ["stm32f1/rt"]
stm32f100 = ["stm32f1/stm32f100", "device-selected"]
stm32f101 = ["stm32f1/stm32f101", "device-selected"]
stm32f103 = ["stm32f1/stm32f103", "device-selected"]
stm32f105 = ["stm32f1/stm32f107", "device-selected", "connectivity"]
stm32f107 = ["stm32f1/stm32f107", "device-selected", "connectivity"]

# Devices with 64 or 128 Kb ROM
medium = []
# Devices with 256 or 512 Kb ROM
high = ["medium"]
# Devices with 768 Kb ROM or more
xl = ["high"]
# Connectivity line devices (`stm32f105xx` and `stm32f107xx`)
connectivity = ["medium"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true